// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders without crashing 1`] = `
<div>
  <div />
  <div>
    <div
      className="cobalt-modal-mask"
    />
    <div
      aria-describedby="dialog2Desc"
      aria-labelledby="dialog2Title"
      className="cobalt-modal-wrap"
      onClick={[Function]}
      role="dialog"
    >
      <div
        className="cobalt-modal"
        onClick={[Function]}
      >
        <div
          className="cobalt-modal-header"
        >
          <div
            className="cobalt-modal-title"
            id="dialog2Title"
          />
          <button
            className="cobalt-modal-close"
            onClick={[Function]}
          >
            <div
              className="cobalt-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
              >
                close.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          className="cobalt-modal-body"
          id="dialog2Desc"
        >
          Here is content of Modal
        </div>
        <div
          className="cobalt-modal-footer"
        >
          <button
            className="cobalt-button cobalt-button-default"
            onClick={[Function]}
          >
            Cancel
          </button>
          <button
            className="cobalt-button cobalt-button-primary"
            onClick={[Function]}
          >
            OK
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders without footer 1`] = `
<div>
  <div />
  <div>
    <div
      className="cobalt-modal-mask"
    />
    <div
      aria-describedby="dialog2Desc"
      aria-labelledby="dialog2Title"
      className="cobalt-modal-wrap"
      onClick={[Function]}
      role="dialog"
    >
      <div
        className="cobalt-modal"
        onClick={[Function]}
      >
        <div
          className="cobalt-modal-header"
        >
          <div
            className="cobalt-modal-title"
            id="dialog2Title"
          />
          <button
            className="cobalt-modal-close"
            onClick={[Function]}
          >
            <div
              className="cobalt-icon"
            >
              <svg
                fill="currentColor"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
              >
                close.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          className="cobalt-modal-body"
          id="dialog2Desc"
        >
          Here is content of Modal
        </div>
      </div>
    </div>
  </div>
</div>
`;
